<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auctionback"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorlogin">

        <EditText
            android:id="@+id/etLogEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email"
            android:inputType="text"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorlogin"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etLogPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_rounded"
        android:text="Login"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnLogRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_rounded"
        android:text="Register"
        android:textSize="22sp" />

</LinearLayout>