<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".UserUpdateActivity">


    <ImageView
        android:id="@+id/imageupdate"
        android:src="@drawable/person"
        android:layout_marginTop="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/etuptfirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"/>
    <EditText
        android:id="@+id/etuptsecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"/>

<Button
    android:background="@drawable/button_rounded"
    android:id="@+id/btnUpdate"
    android:layout_width="300sp"
    android:layout_height="50sp "
    android:text="Click TO Update"
    android:layout_gravity="center"
    />



</LinearLayout>