<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

   <ImageView
       android:id="@+id/imageviewaccount"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"

       android:src="@drawable/person"/>


    <TextView
        android:id="@+id/txtusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btnupdateaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Account"
        android:layout_gravity="center"

        />
</LinearLayout>